--- a/src/components/Relatorios/relatorios.css
+++ b/src/components/Relatorios/relatorios.css
@@ -94,7 +94,7 @@
   align-items: center;
 }
 
-.main-title {
+.dashboard-main-title {
   font-size: 50px;
   font-family: 'Abel', sans-serif; 
   font-weight: bold;
