--- a/src/components/Consulta/prontuario.css
+++ b/src/components/Consulta/prontuario.css
@@ -1,5 +1,5 @@
 /* Container principal da página */
-.cadastro_pet-container {
+.prontuario-container {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -11,7 +11,7 @@
 }
 
 /* Estilos do cabeçalho */
-.cadastro_pet-header {
+.prontuario-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -231,11 +231,11 @@
 }
 
 /* Botão "Cadastrar" */
-.btn-cadastrar {
+.btn-selecionar {
   background-color: #79aebc;
 }
 
-.btn-cadastrar:hover {
+.btn-selecionar:hover {
   background-color: #6398a8;
 }
 
